# WorldOdyssey_inference

./: .gitignore  .gitmodules  README.md  example_run_script.sh  install.sh  main.py  pyproject.toml  sitecustomize.py
configs/: README.md  tiny-wan-batch.yaml  worldodyssey-inputs-batch-t2v-hunyuan-fp8.yaml  worldodyssey-inputs-batch-t2v-tinywan-vsa.yaml  worldodyssey-inputs-batch-t2v-tinywan.yaml  worldodyssey-inputs-batch-t2v-wan-InP.yaml  worldodyssey-inputs-batch-t2v.yaml  worldodyssey-move-bookmark-i2v.yaml  worldodyssey-move-bookmark-t2v-hunyuan-fp8-visual.yaml  worldodyssey-move-bookmark-t2v.yaml
docs/: README.md  tiny-models-and-diffusers.md  video-backend-runbook.md
patches/sglang_hunyuan_fp8/: modelopt_fp8.py
references/: README.md  sglang-diffusion.md  troubleshooting.md  video-backend.md
resources/: README.md
scripts/: benchmark_wan_backends.py  create_tiny_wan_debug_pipeline.py  fastvideo_example.py  install_sglang_diffusion.sh  patch_sglang_hunyuan_fp8.py  serve_sglang_diffusion.sh  serve_video_backend.py  setup_video_backend.sh  sglang_diffusion_serve.py  submit_video_batch.py  submit_worldodyssey_task.py
tests/: test_sglang_hunyuan_fp8_patch.py  test_tiny_wan_debug_pipeline.py  test_video_backend.py  test_wan_benchmark.py  test_worldodyssey_adapter.py
tests/backends/: test_diffusers_example.py  test_fastvideo_example.py  test_fastvideo_tiny_fastwan.py  test_fastvideo_tiny_vsa.py  test_sglang_tiny_wan.py
worldodyssey_inference/: __init__.py  fastvideo_compat.py  run_inference.py  run_inference_multigpu.py  tiny_wan.py  wan_benchmark.py
(+14 files in other folders)
