[project]
name = "worldodyssey-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.0.1",
    "dashscope>=1.25.17",
    "diffusers==0.37.1",
    "easydict>=1.13",
    "ftfy>=6.3.1",
    "huggingface-hub>=0.36.0,<1.0",
    "imageio>=2.36.0",
    "imageio-ffmpeg>=0.5.1",
    "numpy>=2.1.0,<2.2",
    "opencv-python>=4.10.0.84",
    "peft>=0.19.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "tokenizers>=0.22.2",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm>=4.67.3",
    "transformers==4.57.3",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
